[package]
name = "dupef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
xx-hash = "0.1.0"
clap = { version = "3.1.8", features = ["derive"] }
pathwalker = { version = "0.1.2" }
